syntax = "proto3";

package usercenter.api.usercenter.dictionary.v1;

option go_package = "./v1;v1";
option java_multiple_files = true;
option java_package = "usercenter.api.usercenter.dictionary.v1";
option java_outer_classname = "DictionaryV1";

import "validate/validate.proto";

message GetDictionaryRequest {
  message BinaryAndKeyword {
    string binary = 1[(validate.rules).string = {min_len: 1}];
    string keyword = 2[(validate.rules).string = {min_len: 1}];
  }
  oneof params{
    uint32 id = 1[(validate.rules).uint32 = {gte: 1}];
    BinaryAndKeyword binaryAndKeyword = 2;
  }
}

message GetDictionaryReply {
  message User {
    uint32 id = 1;
    string name = 2;
  }
  uint32 id = 1;
  uint32 userId = 2[(validate.rules).uint32 = {gte: 1}];
  string keyword = 3[(validate.rules).string = {min_len: 1}];
  string binary = 4[(validate.rules).string = {min_len: 1}];
  optional string description = 5;
  uint32 createdAt = 6;
  uint32 updatedAt = 7;
  repeated User users = 8;
}

message ListDictionaryRequest {
  uint32 page = 1[(validate.rules).uint32 = {gte: 1}];
  uint32 pageSize = 2[(validate.rules).uint32 = {gte: 1,lte:50}];
  optional string order = 3[(validate.rules).string = {in: ["asc","desc"]}];
  optional string orderBy = 4[(validate.rules).string = {in: ["id","binary","created_at","updated_at"]}];
  optional string keyword = 5[(validate.rules).string = {min_len: 1}];
  optional string binary = 6[(validate.rules).string = {min_len: 1}];
}

message ListDictionaryReply {
  message Dictionary {
    message User {
      uint32 id = 1;
      string name = 2;
    }
    uint32 id = 1;
    uint32 userId = 2[(validate.rules).uint32 = {gte: 1}];
    string keyword = 3[(validate.rules).string = {min_len: 1}];
    string binary = 4[(validate.rules).string = {min_len: 1}];
    optional string description = 5;
    uint32 createdAt = 6;
    uint32 updatedAt = 7;
    repeated User users = 8;
  }
  uint32 total = 1;
  repeated Dictionary list = 2;
}

message CreateDictionaryRequest {
  message User {
    uint32 id = 1;
    string name = 2;
  }
  uint32 id = 1;
  uint32 userId = 2[(validate.rules).uint32 = {gte: 1}];
  string keyword = 3[(validate.rules).string = {min_len: 1}];
  string binary = 4[(validate.rules).string = {min_len: 1}];
  optional string description = 5;
  repeated User users = 6;
}

message CreateDictionaryReply {
  uint32 id = 1;
}

message UpdateDictionaryRequest {
  message UpdateUserRequest {
    uint32 id = 1;
    optional string name = 2;
  }
  uint32 id = 1;
  optional uint32 userId = 2[(validate.rules).uint32 = {gte: 1}];
  optional string keyword = 3[(validate.rules).string = {min_len: 1}];
  optional string binary = 4[(validate.rules).string = {min_len: 1}];
  optional string description = 5;
  repeated UpdateUserRequest updateUserRequests = 6;
}

message UpdateDictionaryReply {
}

message DeleteDictionaryRequest {
  repeated uint32 ids = 1[(validate.rules).repeated = {min_items: 1, unique:true, max_items:50}];
}

message DeleteDictionaryReply {
  uint32 total = 1;
}

message GetTrashDictionaryRequest {
  message BinaryAndKeyword {
    string binary = 1[(validate.rules).string = {min_len: 1}];
    string keyword = 2[(validate.rules).string = {min_len: 1}];
  }
  oneof params{
    uint32 id = 1[(validate.rules).uint32 = {gte: 1}];
    BinaryAndKeyword binaryAndKeyword = 2;
  }
}

message GetTrashDictionaryReply {
  message User {
    uint32 id = 1;
    string name = 2;
  }
  uint32 id = 1;
  uint32 userId = 2[(validate.rules).uint32 = {gte: 1}];
  string keyword = 3[(validate.rules).string = {min_len: 1}];
  string binary = 4[(validate.rules).string = {min_len: 1}];
  optional string description = 5;
  uint32 createdAt = 6;
  uint32 updatedAt = 7;
  uint32 deletedAt = 8;
  repeated User users = 9;
}

message ListTrashDictionaryRequest {
  uint32 page = 1[(validate.rules).uint32 = {gte: 1}];
  uint32 pageSize = 2[(validate.rules).uint32 = {gte: 1,lte:50}];
  optional string order = 3[(validate.rules).string = {in: ["asc","desc"]}];
  optional string orderBy = 4[(validate.rules).string = {in: ["id","binary","created_at","updated_at"]}];
  optional string keyword = 5[(validate.rules).string = {min_len: 1}];
  optional string binary = 6[(validate.rules).string = {min_len: 1}];
}

message ListTrashDictionaryReply {
  message Dictionary {
    message User {
      uint32 id = 1;
      string name = 2;
    }
    uint32 id = 1;
    uint32 userId = 2[(validate.rules).uint32 = {gte: 1}];
    string keyword = 3[(validate.rules).string = {min_len: 1}];
    string binary = 4[(validate.rules).string = {min_len: 1}];
    optional string description = 5;
    uint32 createdAt = 6;
    uint32 updatedAt = 7;
    uint32 deletedAt = 8;
    repeated User users = 9;
  }
  uint32 total = 1;
  repeated Dictionary list = 2;
}

message DeleteTrashDictionaryRequest {
  repeated uint32 ids = 1[(validate.rules).repeated = {min_items: 1, unique:true, max_items:50}];
}

message DeleteTrashDictionaryReply {
  uint32 total = 1;
}

message RevertTrashDictionaryRequest {
  uint32 id = 1[(validate.rules).uint32 = {gte: 1}];
}

message RevertTrashDictionaryReply {
}

