syntax = "proto3";

package usercenter.api.usercenter.dictionary.v1;

option go_package = "./v1;v1";
option java_multiple_files = true;
option java_package = "usercenter.api.usercenter.dictionary.v1";
option java_outer_classname = "DictionaryV1";

import "google/api/annotations.proto";
import "api/usercenter/dictionary/usercenter_dictionary.proto";

service Usercenter{

  // GetDictionary 获取指定的字典信息
  rpc GetDictionary (GetDictionaryRequest) returns (GetDictionaryReply) {
    option (google.api.http) = {
      get: "/usercenter/api/v1/dictionary",
    };
  }

  // ListDictionary 获取字典信息列表
  rpc ListDictionary (ListDictionaryRequest) returns (ListDictionaryReply) {
    option (google.api.http) = {
      get: "/usercenter/api/v1/dictionaries",
    };
  }

  // CreateDictionary 创建字典信息
  rpc CreateDictionary (CreateDictionaryRequest) returns (CreateDictionaryReply) {
    option (google.api.http) = {
      post: "/usercenter/api/v1/dictionary",
      body: "*"
    };
  }

  // UpdateDictionary 更新字典信息
  rpc UpdateDictionary (UpdateDictionaryRequest) returns (UpdateDictionaryReply) {
    option (google.api.http) = {
      put: "/usercenter/api/v1/dictionary",
      body: "*"
    };
  }

  // DeleteDictionary 删除字典信息
  rpc DeleteDictionary (DeleteDictionaryRequest) returns (DeleteDictionaryReply) {
    option (google.api.http) = {
      delete: "/usercenter/api/v1/dictionary",
    };
  }

  // GetTrashDictionary 查看指定字典信息回收站数据
  rpc GetTrashDictionary (GetTrashDictionaryRequest) returns (GetTrashDictionaryReply) {
    option (google.api.http) = {
      get: "/usercenter/api/v1/dictionary/trash",
    };
  }

  // ListTrashDictionary 查看字典信息列表回收站数据
  rpc ListTrashDictionary (ListTrashDictionaryRequest) returns (ListTrashDictionaryReply) {
    option (google.api.http) = {
      get: "/usercenter/api/v1/dictionary/trashes",
    };
  }

  // DeleteTrashDictionary 彻底删除字典信息
  rpc DeleteTrashDictionary (DeleteTrashDictionaryRequest) returns (DeleteTrashDictionaryReply) {
    option (google.api.http) = {
      delete: "/usercenter/api/v1/dictionary/trash",
    };
  }

  // RevertTrashDictionary 还原字典信息
  rpc RevertTrashDictionary (RevertTrashDictionaryRequest) returns (RevertTrashDictionaryReply) {
    option (google.api.http) = {
      put: "/usercenter/api/v1/dictionary/trash",
      body: "*"
    };
  }

}